--- a/Phenols_DataUnclean/Data_Recoding.Rmd
+++ b/Phenols_DataUnclean/Data_Recoding.Rmd
@@ -164,24 +164,24 @@ names(FullData_allcycles)
 FullData_allcycles <- FullData_allcycles %>%
   select(-c(URXUCR.x, URXUCR.y))
 
-#URXBPH
-summary(FullData_allcycles$URXBPH, na.rm = FALSE)
+#BPH
+summary(FullData_allcycles$URXBPH, na.rm = FALSE) #450 missing
 #BPF
-summary(FullData_allcycles$URXBPF, na.rm = FALSE)
+summary(FullData_allcycles$URXBPF, na.rm = FALSE) #9506 missing
 #BPS
-summary(FullData_allcycles$URXBPs, na.rm = FALSE)
+summary(FullData_allcycles$URXBPS, na.rm = FALSE)  #9506 missing
 #BP3
-summary(FullData_allcycles$URXBP3, na.rm = FALSE)
+summary(FullData_allcycles$URXBP3, na.rm = FALSE) #450 missing
 #TRS
-summary(FullData_allcycles$URXTRS, na.rm = FALSE)
+summary(FullData_allcycles$URXTRS, na.rm = FALSE) #2115 missing
 #BUP
-summary(FullData_allcycles$URXBUP, na.rm = FALSE)
+summary(FullData_allcycles$URXBUP, na.rm = FALSE) #2115 missing
 #EPB
-summary(FullData_allcycles$URXEPB, na.rm = FALSE)
+summary(FullData_allcycles$URXEPB, na.rm = FALSE) #2115 missing
 #MPB
-summary(FullData_allcycles$URXMPB, na.rm = FALSE)
+summary(FullData_allcycles$URXMPB, na.rm = FALSE) #2115 missing
 #PPB
-summary(FullData_allcycles$URXPPB, na.rm = FALSE)
+summary(FullData_allcycles$URXPPB, na.rm = FALSE) #2115 missing
 ```
 
 Create Sample 2 (final analytic dataset)
@@ -197,17 +197,27 @@ names(FullData_allcycles)#check if variable was created
 ###Outliers
 
 raw column= phenol concentration (ng/mL), flag_column= below or above LOD?  LOD= obtained from NHANES documentation (the doc file on NHANES website. You can use last cycle years doc to fill in these values)
+
+Urinary Bisphenol A - URXBPH
+Urinary Bisphenol F - URXBPF
+Urinary Bisphenol S - URXBPS
+Urinary 2-Hydroxy-4-metoxybenzophenone (Benzophenone-3) - URXBP3
+Urinary 2,4,4’-Trichloro-2’-hydroxyphenyl ether (Triclosan) - URXTRS
+Urinary Butyl paraben - URXBUP
+Urinary Propyl paraben - URXPPB
+Urinary Ethyl paraben - URXEPB
+Urinary Methyl paraben - URXMPB
 ```{r}
 # Define metabolites, their raw columns, flag columns, and their respective LOD values
 metabolites <- list(
   BPH = list(raw_col = "URXBPH", flag_col = "URDBPHLC", lod = 0.2), 
-  BPF = list(raw_col = "URXMC1", flag_col = "URDBPFLC", lod = 0.2),
-  BPS = list(raw_col = "URXMEP", flag_col = "URDBPSLC", lod = 0.1),
-  BP3 = list(raw_col = "URXMHP", flag_col = "URDBP3LC", lod = 0.4),
-  TRS = list(raw_col = "URXMIB", flag_col = "URDTRSLC", lod = 1.7),
-  BUP = list(raw_col = "URXMZP", flag_col = "URDBUPLC", lod = 0.1),
-  EPB = list(raw_col = "URXMHH", flag_col = "URDEPBLC", lod = 1.0),
-  MPB = list(raw_col = "URXMOH", flag_col = "URDMPBLC", lod = 1.0),
+  BPF = list(raw_col = "URXBPF", flag_col = "URDBPFLC", lod = 0.2),
+  BPS = list(raw_col = "URXBPS", flag_col = "URDBPSLC", lod = 0.1),
+  BP3 = list(raw_col = "URXBP3", flag_col = "URDBP3LC", lod = 0.4),
+  TRS = list(raw_col = "URXTRS", flag_col = "URDTRSLC", lod = 1.7),
+  BUP = list(raw_col = "URXBUP", flag_col = "URDBUPLC", lod = 0.1),
+  EPB = list(raw_col = "URXEPB", flag_col = "URDEPBLC", lod = 1.0),
+  MPB = list(raw_col = "URXMPB", flag_col = "URDMPBLC", lod = 1.0),
   PPB = list (raw_col = "URXPPB", flag_col = "URDPPBLC", lod = 0.1)
 )
 
